ghc-4335c07/testsuite/tests/rename/should_compile/T9778.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE GADTs #-}
module T9778 where

data T = A | B

data G a where
  C :: G A
