ghc-4335c07/testsuite/tests/rename/should_fail/rnfail009.hs
module Foo where

data F = A | B

data G = A | C
